apps/monitor-api/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: crypto-monitor-api
  name: crypto-monitor-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-monitor-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        app: crypto-monitor-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - gundnet-k8s
      containers:
        - name: crypto-monitor-api
          image: gundua/crypto-monitor:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: '100Mi'
              cpu: '0.5'
            requests:
              memory: '50Mi'
              cpu: '0.1'
          volumeMounts:
            - mountPath: /data
              name: crypto-monitor-api-claim
      restartPolicy: Always
      volumes:
        - name: crypto-monitor-api-claim
          persistentVolumeClaim:
            claimName: crypto-monitor-api-claim
status: {}
