apps/monitor-api/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: crypto-monitor-api
  name: crypto-monitor-api
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: crypto-monitor-api
