apps/monitor-api/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-monitor-api
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-mk8s
spec:
  ingressClassName: public
  rules:
    - host: crypto-monitor-api.gund.gay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-monitor-api
                port:
                  number: 4000
    - host: crypto-monitor-api.gund.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-monitor-api
                port:
                  number: 4000
  tls:
    - hosts:
        - crypto-monitor-api.gund.gay
        - crypto-monitor-api.gund.io
      secretName: crypto-monitor-api-tls
